--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=auth_db
+DB_NAME=auth_jwt_db
 DB_PASSWORD=admin
 DB_PORT=5432
 JWT_SECRET=MhYkj29kOqpRps
