--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -18,13 +19,17 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "pg-connection-string": "^2.7.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@faker-js/faker": "^9.4.0",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "faker": "^6.6.6",
     "jest": "^29.7.0",
